[Feature][256] Use different approach for link cells.

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -62,7 +62,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
@@ -80,7 +80,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
@@ -98,7 +98,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
@@ -116,7 +116,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
@@ -134,7 +134,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
@@ -152,7 +152,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
-            <td><a href="#">Body</a></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
                 <option>One</option>
