--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -76,7 +76,7 @@
             <td>Body</td>
           </tr>
           <tr>
-            <td class="rs-table-status rs-table-status-warning"></td>
+            <td class="rs-table-status rs-table-status-ok rs-table-status-striped"></td>
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
@@ -94,7 +94,7 @@
             <td>Body</td>
           </tr>
           <tr>
-            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-status rs-table-status-processing"></td>
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
@@ -112,7 +112,7 @@
             <td>Body</td>
           </tr>
           <tr>
-            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-status rs-table-status-processing rs-table-status-striped"></td>
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
@@ -143,6 +143,24 @@
               </select>
             </td>
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td>Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td>Body</td>
+          </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-warning rs-table-status-striped"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td>Body</td>
             <td>Body</td>
             <td class="rs-table-input"><input type="text"></td>
             <td>Body</td>
