adding rs-table-text class and updating markup

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -71,9 +71,9 @@
               </select>
             </td>
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok rs-table-status-striped"></td>
@@ -88,10 +88,10 @@
                 <option>Three</option>
               </select>
             </td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-processing"></td>
@@ -107,9 +107,9 @@
               </select>
             </td>
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-processing rs-table-status-striped"></td>
@@ -124,10 +124,10 @@
                 <option>Three</option>
               </select>
             </td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
@@ -143,9 +143,9 @@
               </select>
             </td>
             <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning rs-table-status-striped"></td>
@@ -178,82 +178,82 @@
                 <option>Three</option>
               </select>
             </td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
             <td class="rs-table-input"><input type="text"></td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
           <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
-            <td>Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
           </tr>
         </tbody>
       </table>
