adding table hover and selected markup to list-table page

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -57,6 +57,42 @@
           </tr>
         </thead>
         <tbody>
+          <tr class="hover">
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-text">Hover</td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td class="rs-table-text">Body</td>
+          </tr>
+          <tr class="selected">
+            <td class="rs-table-status rs-table-status-ok"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection" checked></td>
+            <td class="rs-table-text">Selected</td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-input"><a class="rs-btn" href="#">Button</a></td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td class="rs-table-text">Body</td>
+          </tr>
           <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"><input type="checkbox"></td>
