--- a/examples/screenshots/list-table-empty.html
+++ b/examples/screenshots/list-table-empty.html
@@ -4,14 +4,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Screenshot | List Table Loading</title>
+  <title>Screenshot | List Table Empty</title>
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <table class="rs-list-table" style="height: 500px;">
-      <caption class="rs-table-overlay rs-table-overlay-loading"></caption>
+      <caption class="rs-table-overlay">
+        <div class="rs-table-overlay-content">
+          <div class="rs-table-overlay-title">Title</div>
+          <div class="rs-table-overlay-subtitle">Sub-Title</div>
+          <div class="rs-table-overlay-message">This is a message.</div>
+        </div>
+      </caption>
       <thead>
         <tr>
           <th class="rs-table-status"></th>
