[Feature][283] Add delete button.

--- a/examples/screenshots/buttons.html
+++ b/examples/screenshots/buttons.html
@@ -188,5 +188,27 @@
     <a class="rs-edit disabled"></a>
     <a class="rs-edit hover"></a>
   </div>
+  <!-- Delete Button -->
+  <!-- Button Tag -->
+  <div class="rs-btn-group">
+    <button class="rs-delete"></button>
+    <button class="rs-delete active"></button>
+    <button class="rs-delete disabled"></button>
+    <button class="rs-delete hover"></button>
+  </div>
+  <!-- Input Tag -->
+  <div class="rs-btn-group">
+    <input class="rs-delete" type="button">
+    <input class="rs-delete active" type="button">
+    <input class="rs-delete disabled" type="button">
+    <input class="rs-delete hover" type="button">
+  </div>
+  <!-- Anchor Tag -->
+  <div class="rs-btn-group">
+    <a class="rs-delete"></a>
+    <a class="rs-delete active"></a>
+    <a class="rs-delete disabled"></a>
+    <a class="rs-delete hover"></a>
+  </div>
 </body>
 </html>
