[Feature][283] Add delete cell.

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -18,6 +18,7 @@
             <th class="rs-table-checkbox"><input type="checkbox"></th>
             <th class="rs-table-cog"></th>
             <th class="rs-table-radio"></th>
+            <th class="rs-table-delete"></th>
             <th>
               <a href="#" class="rs-table-sort">
                 <span class="rs-table-sort-text">Header (Normal)</span>
@@ -62,6 +63,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Hover</td>
             <td class="rs-table-select">
               <select>
@@ -80,6 +82,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection" checked></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-text">Selected</td>
             <td class="rs-table-select">
               <select>
@@ -98,6 +101,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -116,6 +120,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -134,6 +139,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -152,6 +158,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -170,6 +177,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -188,6 +196,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -206,6 +215,7 @@
             <td class="rs-table-checkbox"><input type="checkbox"></td>
             <td class="rs-table-cog"><button class="rs-cog"></button></td>
             <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
             <td class="rs-table-link"><a href="#">Body</a></td>
             <td class="rs-table-select">
               <select>
@@ -224,6 +234,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -236,6 +247,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -248,6 +260,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -260,6 +273,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -272,6 +286,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -284,6 +299,7 @@
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
+            <td class="rs-table-delete"></td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
