updating loading styles to better support i18n

--- a/examples/screenshots/list-table-loading.html
+++ b/examples/screenshots/list-table-loading.html
@@ -11,7 +11,11 @@
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <table class="rs-list-table" style="height: 500px;">
-      <caption class="rs-table-overlay rs-table-overlay-loading"></caption>
+      <caption class="rs-table-overlay rs-table-overlay-loading">
+        <div class="rs-table-overlay-content">
+          <div class="rs-table-overlay-message">Loading&hellip;</div>
+        </div>
+      </caption>
       <thead>
         <tr>
           <th class="rs-table-status"></th>
