[Feature][278] Add focus and disabled states for inputs.

--- a/examples/screenshots/form.html
+++ b/examples/screenshots/form.html
@@ -33,6 +33,12 @@
       </select>
     </fieldset>
     <fieldset>
+      <legend>Input States</legend>
+      <input type="text" class="focus" value="Focused!"><br>
+      <input type="text" value="Disabled!" disabled><br>
+      <input type="text" value="Read Only!" readonly>
+    </fieldset>
+    <fieldset>
       <legend>Checkbox and Radio Groups</legend>
       <label class="rs-checkbox">
         <input type="checkbox">
