[Feature][278] Add custom select styles.

--- a/examples/screenshots/form.html
+++ b/examples/screenshots/form.html
@@ -36,7 +36,10 @@
       <legend>Input States</legend>
       <input type="text" class="focus" value="Focused!"><br>
       <input type="text" value="Disabled!" disabled><br>
-      <input type="text" value="Read Only!" readonly>
+      <input type="text" value="Read Only!" readonly><br>
+      <select class="focus"></select><br>
+      <select disabled></select><br>
+      <select readonly></select><br>
     </fieldset>
     <fieldset>
       <legend>Checkbox and Radio Groups</legend>
