adding error icon

--- a/examples/screenshots/list-table-error.html
+++ b/examples/screenshots/list-table-error.html
@@ -12,7 +12,7 @@
   <div style="padding: 40px;">
     <table class="rs-list-table" style="height: 500px;">
       <caption class="rs-table-overlay rs-table-overlay-error">
-        <div class="rs-table-overlay-message">This is an error message.</div>
+        <div class="rs-table-overlay-message"><i class="rs-icon-error-indicator"></i>This is an error message.</div>
       </caption>
       <thead>
         <tr>
