[Feature][278] Add focus style for fields with validation errors.

--- a/examples/screenshots/form.html
+++ b/examples/screenshots/form.html
@@ -33,13 +33,24 @@
       </select>
     </fieldset>
     <fieldset>
-      <legend>Input States</legend>
+      <legend>Input States (Default)</legend>
       <input type="text" class="focus" value="Focused!"><br>
       <input type="text" value="Disabled!" disabled><br>
       <input type="text" value="Read Only!" readonly><br>
       <select class="focus"></select><br>
       <select disabled></select><br>
       <select readonly></select><br>
+    </fieldset>
+    <fieldset>
+      <legend>Input States (Error)</legend>
+      <div class="rs-control-group error">
+        <input type="text" class="focus" value="Focused!"><br>
+        <input type="text" value="Disabled!" disabled><br>
+        <input type="text" value="Read Only!" readonly><br>
+        <select class="focus"></select><br>
+        <select disabled></select><br>
+        <select readonly></select><br>
+      </div>
     </fieldset>
     <fieldset>
       <legend>Checkbox and Radio Groups</legend>
