update to rs-back-link

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -124,8 +124,8 @@
           </div>
         </div>
         <!-- Sidebar (Right) -->
-        <div class="rs-backlink">
-          <a href="#">&lsaquo;&lsaquo; Back to List</a>
+        <div class="rs-back-link">
+          <a href="#">&lsaquo; Back to List</a>
         </div>
         <div class="rs-main">
           <div class="rs-sidebar rs-pull-right">
@@ -136,8 +136,8 @@
           </div>
         </div>
         <!-- Sidebar (Right, Panel) -->
-        <div class="rs-backlink">
-          <a href="#">&lsaquo;&lsaquo; Back to List</a>
+        <div class="rs-back-link">
+          <a href="#">&lsaquo; Back to List</a>
         </div>
         <div class="rs-main rs-panel">
           <div class="rs-sidebar rs-pull-right">
@@ -148,8 +148,8 @@
           </div>
         </div>
         <!-- Full-Width Content -->
-        <div class="rs-backlink">
-          <a href="#">&lsaquo;&lsaquo; Back to List</a>
+        <div class="rs-back-link">
+          <a href="#">&lsaquo; Back to List</a>
         </div>
         <div class="rs-main">
           <div class="rs-content rs-panel"></div>
