overlays centered via container w/ display: table; and centering content with display: table-cell;

--- a/examples/screenshots/embedded-list-table-empty.html
+++ b/examples/screenshots/embedded-list-table-empty.html
@@ -12,10 +12,6 @@
   <div style="padding: 40px;">
     <div class="rs-embedded-list-table-wrapper rs-embedded-medium">
       <table class="rs-list-table rs-embedded-list-table">
-        <caption class="rs-table-overlay">
-          <div class="rs-table-overlay-subtitle">Sub-Title</div>
-          <div class="rs-table-overlay-message">This is a message.</div>
-        </caption>
         <thead>
           <tr>
             <th class="rs-table-status"></th>
@@ -48,6 +44,12 @@
         <tbody>
         </tbody>
       </table>
+      <div class="rs-table-overlay">
+        <div class="rs-table-overlay-content">
+          <div class="rs-table-overlay-subtitle">Sub-Title</div>
+          <div class="rs-table-overlay-message">This is a message.</div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
