--- a/examples/screenshots/list-table-empty.html
+++ b/examples/screenshots/list-table-empty.html
@@ -10,12 +10,7 @@
 </head>
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
-    <table class="rs-list-table" style="height: 500px;">
-      <caption class="rs-table-overlay">
-        <div class="rs-table-overlay-title">Title</div>
-        <div class="rs-table-overlay-subtitle">Sub-Title</div>
-        <div class="rs-table-overlay-message">This is a message.</div>
-      </caption>
+    <table class="rs-list-table">
       <thead>
         <tr>
           <th class="rs-table-status"></th>
@@ -62,6 +57,13 @@
       </thead>
       <tbody></tbody>
     </table>
+    <div class="rs-table-overlay">
+      <div class="rs-table-overlay-content">
+        <div class="rs-table-overlay-title">Title</div>
+        <div class="rs-table-overlay-subtitle">Sub-Title</div>
+        <div class="rs-table-overlay-message">This is a message.</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
