--- a/examples/screenshots/list-table-loading.html
+++ b/examples/screenshots/list-table-loading.html
@@ -11,9 +11,6 @@
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <table class="rs-list-table" style="height: 500px;">
-      <caption class="rs-table-overlay rs-table-overlay-loading">
-        <div class="rs-table-overlay-message">Loading&hellip;</div>
-      </caption>
       <thead>
         <tr>
           <th class="rs-table-status"></th>
@@ -60,6 +57,11 @@
       </thead>
       <tbody></tbody>
     </table>
+    <div class="rs-table-overlay rs-table-overlay-loading">
+      <div class="rs-table-overlay-content">
+        <div class="rs-table-overlay-message">Loading&hellip;</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
