[Defect][299] Update primary navigation to work without child LIs and As.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -61,8 +61,8 @@
           <a href="#"></a>
         </div>
         <ul class="rs-nav">
-          <li class="rs-dropdown rs-primary-dropdown">
-            <a href="#">Link One <i class="rs-caret"></i></a>
+          <li class="rs-nav-item rs-dropdown rs-primary-dropdown">
+            <a class="rs-nav-link" href="#">Link One <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
@@ -70,8 +70,8 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li class="rs-dropdown rs-primary-dropdown hover">
-            <a href="#">Link Two <i class="rs-caret"></i></a>
+          <li class="rs-nav-item rs-dropdown rs-primary-dropdown hover">
+            <a class="rs-nav-link" href="#">Link Two <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
@@ -79,8 +79,8 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li class="rs-dropdown rs-primary-dropdown active">
-            <a href="#">Link Three <i class="rs-caret"></i></a>
+          <li class="rs-nav-item rs-dropdown rs-primary-dropdown active">
+            <a class="rs-nav-link" href="#">Link Three <i class="rs-caret"></i></a>
             <ul class="rs-dropdown-menu visible">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
@@ -88,9 +88,9 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li><a href="#">Link Four</a></li>
-          <li class="hover"><a href="#">Link Five</a></li>
-          <li class="active"><a href="#">Link Six</a></li>
+          <li class="rs-nav-item"><a class="rs-nav-link" href="#">Link Four</a></li>
+          <li class="rs-nav-item hover"><a class="rs-nav-link" href="#">Link Five</a></li>
+          <li class="rs-nav-item active"><a class="rs-nav-link" href="#">Link Six</a></li>
         </ul>
       </div>
     </div>
