--- a/examples/screenshots/embedded-list-table-loading.html
+++ b/examples/screenshots/embedded-list-table-loading.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Screenshot | Embedded List Table Empty</title>
+  <title>Screenshot | Embedded List Table Loading</title>
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
@@ -44,10 +44,9 @@
         <tbody>
         </tbody>
       </table>
-      <div class="rs-table-overlay">
+      <div class="rs-table-overlay rs-table-overlay-loading">
         <div class="rs-table-overlay-content">
-          <div class="rs-table-overlay-subtitle">Sub-Title</div>
-          <div class="rs-table-overlay-message">This is a message.</div>
+          <div class="rs-table-overlay-message">Loading&hellip;</div>
         </div>
       </div>
     </div>
