[Defect][299] Update secondary navigation to work without child LIs and As.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -97,9 +97,9 @@
     <div class="rs-nav-secondary rs-fixed-top">
       <div class="rs-container">
         <ul class="rs-nav">
-          <li><a href="#">Link One</a></li>
-          <li class="hover"><a href="#">Link Two</a></li>
-          <li class="active"><a href="#">Link Three</a></li>
+          <li class="rs-nav-item"><a class="rs-nav-link" href="#">Link One</a></li>
+          <li class="rs-nav-item hover"><a class="rs-nav-link" href="#">Link Two</a></li>
+          <li class="rs-nav-item active"><a class="rs-nav-link" href="#">Link Three</a></li>
         </ul>
       </div>
     </div>
