[Defect][299] Update footer links to work without child LIs.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -407,12 +407,16 @@
   </div>
   <div class="rs-footer">
     <div class="rs-container">
-      <ul class="rs-links">
-        <li>&copy; 2013 Rackspace, US</li>
-        <li><a href="">Link Text <i class="rs-icon-external-dark"></i></a></li>
-        <li><a href="">Link Text</a></li>
+      <ul class="rs-footer-links">
+        <li class="rs-footer-link">&copy; 2013 Rackspace, US</li>
+        <li class="rs-footer-link"><a href="">Link Text <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-footer-link"><a href="">Link Text</a></li>
       </ul>
-      <p class="rs-link rs-pull-right">Pull right for <a href="#">Feedback</a></p>
+      <ul class="rs-footer-links rs-pull-right">
+        <li class="rs-footer-link">Pull right for <a href="#">One</a></li>
+        <li class="rs-footer-link">Pull right for <a href="#">Two</a></li>
+        <li class="rs-footer-link">Pull right for <a href="#">Three</a></li>
+      </ul>
     </div>
   </div>
 </body>
