[Defect][307] Stop wrapping menu categories.

--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -85,7 +85,7 @@
         <li><span class="rs-dropdown-category">External</span></li>
         <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions</span></li>
+        <li><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
@@ -166,7 +166,7 @@
         <li><span class="rs-dropdown-category">External</span></li>
         <li><a href="#">Link External <i class="rs-icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="rs-icon-external"></i></a></li>
-        <li><span class="rs-dropdown-category">Captions</span></li>
+        <li><span class="rs-dropdown-category">Captions can be really long sometimes</span></li>
         <li><a href="#">Link <span class="rs-dropdown-caption">With a caption that is really long and should wrap.</span></a></li>
         <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
