[Defect][299] Alias .rs-footer as .rs-nav-footer.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -405,7 +405,7 @@
     </div>
     <div class="rs-push"></div>
   </div>
-  <div class="rs-footer">
+  <div class="rs-nav-footer">
     <div class="rs-container">
       <ul class="rs-footer-links">
         <li class="rs-footer-link">&copy; 2013 Rackspace, US</li>
