[Defect][306] Add disabled state link placeholders to screenshot.

--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -49,9 +49,15 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li><a href="#">Link Four</a></li>
-          <li class="hover"><a href="#">Link Five</a></li>
-          <li class="active"><a href="#">Link Six</a></li>
+          <li class="rs-dropdown rs-utility-dropdown disabled">
+            <a href="#">Link Four <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
@@ -88,9 +94,15 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li><a href="#">Link Four</a></li>
-          <li class="hover"><a href="#">Link Five</a></li>
-          <li class="active"><a href="#">Link Six</a></li>
+          <li class="rs-dropdown rs-primary-dropdown disabled">
+            <a href="#">Link Four <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
@@ -100,6 +112,7 @@
           <li><a href="#">Link One</a></li>
           <li class="hover"><a href="#">Link Two</a></li>
           <li class="active"><a href="#">Link Three</a></li>
+          <li class="disabled"><a href="#">Link Four</a></li>
         </ul>
       </div>
     </div>
