--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -49,9 +49,15 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li class="rs-nav-item"><a class="rs-nav-link" href="#">Link Four</a></li>
-          <li class="rs-nav-item hover"><a class="rs-nav-link" href="#">Link Five</a></li>
-          <li class="rs-nav-item active"><a class="rs-nav-link" href="#">Link Six</a></li>
+          <li class="rs-nav-item rs-dropdown rs-utility-dropdown disabled">
+            <a class="rs-nav-link" href="#">Link Four <i class="rs-caret"></i></a>
+            <ul class="rs-dropdown-menu">
+              <li><a href="#">One</a></li>
+              <li><a href="#">Two</a></li>
+              <li class="rs-divider"></li>
+              <li><a href="#">Three</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
@@ -88,9 +94,9 @@
               <li><a href="#">Three</a></li>
             </ul>
           </li>
-          <li class="rs-nav-item"><a class="rs-nav-link" href="#">Link Four</a></li>
-          <li class="rs-nav-item hover"><a class="rs-nav-link" href="#">Link Five</a></li>
-          <li class="rs-nav-item active"><a class="rs-nav-link" href="#">Link Six</a></li>
+          <li class="rs-nav-item rs-dropdown rs-primary-dropdown disabled">
+            <span class="rs-nav-link">Link Four <i class="rs-caret"></i></span>
+          </li>
         </ul>
       </div>
     </div>
@@ -100,6 +106,7 @@
           <li class="rs-nav-item"><a class="rs-nav-link" href="#">Link One</a></li>
           <li class="rs-nav-item hover"><a class="rs-nav-link" href="#">Link Two</a></li>
           <li class="rs-nav-item active"><a class="rs-nav-link" href="#">Link Three</a></li>
+          <li class="rs-nav-item disabled"><span class="rs-nav-link">Link Four</span></li>
         </ul>
       </div>
     </div>
