[Defect][299] Rework footer to use same structure as navigation.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -407,7 +407,17 @@
   </div>
   <div class="rs-nav-footer">
     <div class="rs-container">
-      <ul class="rs-footer-links">
+      <ul class="rs-nav">
+        <li class="rs-nav-item">&copy; 2013 Rackspace, US</li>
+        <li class="rs-nav-item"><a href="" class="rs-nav-link">Link Text <i class="rs-icon-external-dark"></i></a></li>
+        <li class="rs-nav-item"><a href="" class="rs-nav-link">Link Text</a></li>
+      </ul>
+      <ul class="rs-nav rs-pull-right">
+        <li class="rs-nav-item">Pull right for <a href="#">One</a></li>
+        <li class="rs-nav-item">Pull right for <a href="#">Two</a></li>
+        <li class="rs-nav-item">Pull right for <a href="#">Three</a></li>
+      </ul>
+      <!-- <ul class="rs-footer-links">
         <li class="rs-footer-link">&copy; 2013 Rackspace, US</li>
         <li class="rs-footer-link"><a href="">Link Text <i class="rs-icon-external-dark"></i></a></li>
         <li class="rs-footer-link"><a href="">Link Text</a></li>
@@ -416,7 +426,7 @@
         <li class="rs-footer-link">Pull right for <a href="#">One</a></li>
         <li class="rs-footer-link">Pull right for <a href="#">Two</a></li>
         <li class="rs-footer-link">Pull right for <a href="#">Three</a></li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </body>
